# SpriteShrink

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DiscDiff.md  README.md
.github/workflows/: publish_crate.yml  release.yml
Manual/: user_manual.md
SSMC_File_Specification/: SPECIFICATION.md
crates/cli_application/: Cargo.toml
crates/cli_application/src/: archive_parser.rs  arg_handling.rs  auto_tune.rs  cli_types.rs  db_transactions.rs  decompression.rs  error_handling.rs  main.rs  storage_io.rs  utils.rs
crates/cli_application/src/modes/: compress.rs  extract.rs  info.rs  mod.rs
crates/cli_application/src/modes/compress_modes/: default.rs  mod.rs  optical.rs
crates/lib_sprite_shrink/: Cargo.toml  build.rs  cbindgen.toml
crates/lib_sprite_shrink/src/: archive.rs  ffi_structs.rs  lib.rs  lib_error_handling.rs  lib_structs.rs  parsing.rs  processing.rs  serialization.rs
crates/lib_sprite_shrink/src/ffi/: archive_ffi.rs  ffi_error_handling.rs  ffi_structs.rs  ffi_types.rs  mod.rs  parsing_ffi.rs  processing_ffi.rs  serialization_ffi.rs
crates/lib_ss_cd/: Cargo.toml  cbindgen.toml
crates/lib_ss_cd/src/: analyze.rs  cue_gen.rs  cue_parser.rs  decode.rs  ecc.rs  flac.rs  lib.rs  lib_error_handling.rs  lib_structs.rs  mapper.rs  reconstruction.rs  stream.rs  util.rs
helper_scripts/: README.md  helper_scripts.md  shrink_library.ps1  shrink_library.sh
