[package]
name = "sprite_shrink_application"
version = "0.9.0"
edition = "2024"

[[bin]]
name = "sprite-shrink"
path = "src/main.rs"

[dependencies]
sprite_shrink = {path = "../lib_sprite_shrink"}

bytesize = "2.0.1"
clap = { version = "4.5.40", features = ["derive"] }
dashmap = "6.1.0"
indicatif = "0.18.0"
libc = "0.2.174"
range-parser = "0.1.2"
rayon = "1.10.0"
thiserror = "2.0.12"
thread-priority = "2.1.0"

[target.'cfg(target_os = "macos")'.dependencies]
dispatch2 = "0.3.0"