[package]
name = "sprite_shrink_application"
version = "0.9.1"
edition = "2024"
license = "GPL-3.0-only"

[[bin]]
name = "sprite-shrink"
path = "src/main.rs"

[dependencies]
sprite_shrink = {path = "../lib_sprite_shrink"}

bytesize = "2.0"
clap = { version = "4.5", features = ["derive"] }
confy = "1.0"
ctrlc = "3.5"
dashmap = "6.1"
dhat = { version = "0.3.3", optional = true }
directories = "6.0"
fastcdc = "3"
flume = "0.11.1"
indicatif = "0.18.0"
human_bytes = "0.4"
libc = "0.2.174"
range-parser = "0.1.2"
rayon = "1.10"
redb = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
sysinfo = "0.37.0"
thiserror = "2.0"
thread-priority = "2.1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }
xxhash-rust = {version = "0.8", features = ["xxh3"] }

[features]
dhat-heap = ["dhat"]