[package]
name = "sprite_shrink_application"
version = "0.9.9-beta2"
edition = "2024"
license = "GPL-3.0-only"

[[bin]]
name = "sprite-shrink"
path = "src/main.rs"

[dependencies]
sprite_shrink = {path = "../lib_sprite_shrink"}
sprite_shrink_cd = {path = "../lib_ss_cd"}

bitcode = { version = "0.6", default-features = false }
bytesize = { version = "2.0", default-features = false }
clap = { version = "4.5", default-features = false, features = ["derive", "help", "std"] }
confy = { version = "2.0", default-features = false, features = ["toml_conf"]}
ctrlc = { version = "3.5", default-features = false }
dashmap = { version = "6.1", default-features = false }
dhat = { version = "0.3.3", default-features = false, optional = true }
directories = { version = "6.0", default-features = false }
fastcdc = { version = "3.2", default-features = false }
flume = { version = "0.11", default-features = false }
indicatif = { version = "0.18.0", default-features = false }
human_bytes = { version = "0.4", default-features = false }
range-parser = { version = "0.1.2", default-features = false }
rayon = { version = "1.10", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
sha2 = { version = "0.10", default-features = false }
sysinfo = { version = "0.37.0", default-features = false, features = ["system"]}
thiserror = { version = "2.0", default-features = false }
thread-priority = { version = "2.1", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-appender = { version = "0.2", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "json"] }

[features]
dhat-heap = ["dhat"]
