[package]
name = "sprite_shrink"
version = "0.1.0"
edition = "2024"

[lib]
name = "sprite_shrink"
crate-type = ["rlib", "staticlib"]

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
bytemuck = { version = "1.23.1", features = ["derive"] }
dashmap = "6.1.0"
fastcdc = "3.2.1"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.9"
thiserror = "2.0.12"
xxhash-rust = {version = "0.8.12", features = ["xxh3", "const_xxh3"] }
zerocopy = { version = "0.8.26", features = ["derive"] }
zstd = { version = "0.13.3", features = ["zdict_builder"] }
zstd-sys = { version = "2.0.15", features = ["zdict_builder", "experimental", "zstdmt"] }