[package]
name = "sprite_shrink"
version = "0.9.1"
edition = "2024"
publish = true
license = "MPL-2.0"

[lib]
name = "sprite_shrink"
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
bincode = { version = "2.0", features = ["serde"] }
bytemuck = { version = "1.23", features = ["derive"] }
dashmap = "6.1"
fastcdc = "3.2"
flume = "0.11"
libc = "0.2.174"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
thiserror = "2.0"
xxhash-rust = {version = "0.8", features = ["xxh3"] }
zerocopy = { version = "0.8", features = ["derive"] }
zstd = { version = "0.13", features = ["zdict_builder"] }
zstd-sys = { version = "2.0", features = ["zdict_builder", "experimental", "zstdmt"] }

[build-dependencies]
cbindgen = "0.29"