[package]
name = "sprite_shrink_cd"
version = "0.1.0"
edition = "2024"
publish = true
license = "MPL-2.0"

[lib]
name = "sprite_shrink_cd"
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
sprite_shrink = {path = "../lib_sprite_shrink"}

crc-fast = { version = "1.10", features = ["alloc"] }
flume = "0.11"
once_cell = "1.21"
pulp = "0.22"
regex = "1"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
thiserror = "2.0"

[build-dependencies]
cbindgen = "0.29"
