[package]
name = "sprite_shrink_cd"
version = "0.1.0"
edition = "2024"
publish = true
license = "MPL-2.0"

[lib]
name = "sprite_shrink_cd"
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
sprite_shrink = {path = "../lib_sprite_shrink"}

crc-fast = { version = "1.10", default-features = false, features = ["alloc", "std"] }
flac-codec = { version = "1.3.0", default-features = false }
flume = { version = "0.11", default-features = false }
once_cell = { version = "1.21", default-features = false }
pulp = { version = "0.22", default-features = false }
regex = { version = "1", default-features = false }
sha2 = { version = "0.10", default-features = false}
serde = { version = "1.0", default-features = false, features = ["derive"] }
tracing = { version = "0.1", default-features = false }
thiserror = { version = "2.0", default-features = false}

[build-dependencies]
cbindgen = "0.29"
