[package]
name = "sprite_shrink_cd"
version = "0.1.0"
edition = "2024"
publish = true
license = "MPL-2.0"

[lib]
name = "sprite_shrink_cd"
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
sprite_shrink = {path = "../lib_sprite_shrink"}

bitcode = { version = "0.6", default-features = false, features = ["derive"] }
bytemuck = { version = "1.23", default-features = false, features = ["derive"] }
crc-fast = { version = "1.10", default-features = false, features = ["alloc", "std"] }
dashmap = { version = "6.1", default-features = false }
flac-codec = { version = "1.3.0", default-features = false }
flume = { version = "0.11", default-features = false }
once_cell = { version = "1.21", default-features = false }
pulp = { version = "0.22" }
regex = { version = "1", default-features = false, features = ["unicode-perl"] }
sha2 = { version = "0.10", default-features = false}
serde = { version = "1.0", default-features = false, features = ["derive"] }
tracing = { version = "0.1", default-features = false }
thiserror = { version = "2.0", default-features = false}
xxhash-rust = { version = "0.8", default-features = false, features = ["xxh3"] }
zerocopy = { version = "0.8", default-features = false, features = ["derive"] }

[build-dependencies]
cbindgen = "0.29"
